src/test/deca/context/invalid/homemade/duplicate_method_decompile.res
class A extends Object {
	int x(float y) {
		return 3;
	}
	int x(float y) {
		return 3;
	}
}
